src/test/deca/syntax/invalid/lexer/int_decl.deca
// Description:
//   Test entier trop grand
//
// Resultats:
// Ligne <8> : entier trop grand

{
    int pair = 3123432138;
}